syntax = "proto3";
package pb;
option go_package="./;pb";

service DataNode {
	rpc UploadFileBlock(UploadArgs) returns (DnodeResult) {}
}

message UploadArgs {
	string FileSha1 = 1;
	string FileBlockPath = 2;
	int32 Replica = 3;
	string SftpIPAddr = 4;
}

message DnodeResult {
	int32 code = 1;
	string message = 2;
}